--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 </header>
 
-
+<center>
 <body bgcolor="#F5FFFA">
     <style>
         em {
@@ -70,21 +70,22 @@
         }
 
         h1 {
-            background-color: white
+            background-color: white;
             top: 100px;
             right: 400px;
         }
 
         h3 {
-            background-color:white
+            background-color:white;
         }
 
         p {
-            background-color:white
+            background-color:white;
+            padding: 10px;
         }
 
         section {
-            background-color: white
+            background-color: white;
         }
 
         body {
@@ -94,7 +95,7 @@
     
         span {
             font-size: 100px;
-            background-color:white
+            background-color:white;
         }
     </style>
 
@@ -1849,7 +1850,7 @@
 
 
 
-</body>
+</body></center>
 
 <div class="menu-overlay"></div>
 <a href="#" class="menu-open">Vá ao topo da tela</a>
