--- a/Mt.html
+++ b/Mt.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<center>
 <html lang="pt-br">
 
 <head>
@@ -393,4 +394,4 @@
 
 <footer>Desenvolvido por Deusdeth JC</footer>
 
-</html>
+</html></center>
