--- a/MG.html
+++ b/MG.html
@@ -126,23 +126,23 @@
 
     <section>
         <div class="zoom">
-            <img src="imagens1/cap1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap1.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
-            <img src="imagens1/cap2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap2.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
-            <img src="imagens1/cap3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap3.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
-            <img src="imagens1/cap4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap4.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
-            <img src="imagens1/cap5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap5.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
-            <img src="imagens1/cap6.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap6.PNG" width="45%" height="100%" vspace="07px" hspace="10px">
             <div class="text-item"></div>
         </div>
     </section>
 
     <section>
-        <iframe width="1190" height="409" src="https://www.youtube.com/embed/fTkxEj1dimo" frameborder="0"
+        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/fTkxEj1dimo" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
         </iframe>
@@ -175,7 +175,7 @@
     </section>
 
     <section>
-        <iframe width="1190" height="409" src="https://www.youtube.com/embed/DWxfR_4CRG4" frameborder="0" allow="accelerometer; 
+        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/DWxfR_4CRG4" frameborder="0" allow="accelerometer; 
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
     </section>
@@ -209,7 +209,7 @@
     </section>
 
     <section>
-        <iframe width="1190" height="480" src="https://www.youtube.com/embed/Q6ObeSnzXoc" frameborder="0"
+        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/Q6ObeSnzXoc" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
         </iframe>
@@ -247,7 +247,7 @@
     </section>
     <section>
 
-        <iframe width="1190" height="480" src="https://www.youtube.com/embed/th8IQ7Swros" frameborder="0" allow="accelerometer; autoplay; 
+        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/th8IQ7Swros" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
 
@@ -313,7 +313,7 @@
     </div>
 </section>
 
-<iframe width="1190" height="480" src="https://www.youtube.com/embed/EZ8mDCNhPYo" frameborder="0" allow="accelerometer; 
+<iframe width="92%" height="100%" src="https://www.youtube.com/embed/EZ8mDCNhPYo" frameborder="0" allow="accelerometer; 
 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
@@ -347,7 +347,7 @@ autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow
     </div>
 </section>
 
-<iframe width="1190" height="380" src="https://www.youtube.com/embed/cMGfrzn-sBY" frameborder="0" allow="accelerometer; 
+<iframe width="92%" height="100%" src="https://www.youtube.com/embed/cMGfrzn-sBY" frameborder="0" allow="accelerometer; 
       autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
@@ -391,7 +391,7 @@ autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow
         local.</h3><br><br><br><br>
 </section>
 
-<iframe width="1190" height="480" src="https://www.youtube.com/embed/JjyLhZABz20" frameborder="0" allow="accelerometer; autoplay;
+<iframe width="92%" height="100%" src="https://www.youtube.com/embed/JjyLhZABz20" frameborder="0" allow="accelerometer; autoplay;
      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
