--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <img src="img/socorro 04.PNG" width="47%" height="100%" <br clear="left">
                 </style>
                 </div>
-                <iframe width="92%" height="100%" src="https://www.youtube.com/embed/X0s2PbNAu9o" frameborder="0"
+                <iframe width="940" height="480" src="https://www.youtube.com/embed/X0s2PbNAu9o" frameborder="0"
                     allow="accelerometer; autoplay; 
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -208,7 +208,7 @@
                     <img src="img/tiro1.PNG" width="49%" height="100%"<br clear="left">
                     <img src="img/tiro4.PNG" width="45%" height="100%" <br clear="left">
                 </section>
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/qxs8EvC2M-c" frameborder="0"
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/qxs8EvC2M-c" frameborder="0"
                     allow="accelerometer; 
         autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -249,7 +249,7 @@
                     <img src="img/sao roque 01.PNG" width="54%" height="100%" <br clear="left">
                     
                 </section>
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/f-4K06redUY" frameborder="0"
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/f-4K06redUY" frameborder="0"
                     allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -296,7 +296,7 @@
                 <img src="img/holambra 03.PNG" width="48%" height="100%" <br clear="left">
                 <img src="img/holambra.PNG" width="43%" height="100%" <br clear="left">
             </section>
-            <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/Ia0zSfLg4sc" frameborder="0" allow="accelerometer;
+            <iframe width="940" height="480"  src="https://www.youtube.com/embed/Ia0zSfLg4sc" frameborder="0" allow="accelerometer;
          autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
@@ -349,9 +349,9 @@
                 <img src="img/rafit brotas.PNG" width="50%" height="100%" <br clear="left">
                 <img class="foto" src="img/brotas6.PNG" width="36%" height="100%" <br clear="left">
             </section>
-            <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/uvrYWdsv5O0" frameborder="0" allow="accelerometer;
+            <iframe width="940" height="480"  src="https://www.youtube.com/embed/uvrYWdsv5O0" frameborder="0" allow="accelerometer;
          autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/Uf8AUKwZCJA" frameborder="0" allow="accelerometer; autoplay; 
+         <iframe width="940" height="480"  src="https://www.youtube.com/embed/Uf8AUKwZCJA" frameborder="0" allow="accelerometer; autoplay; 
          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
@@ -459,7 +459,7 @@
                 <img src="img/pinhal1.PNG" width="45%" height="100%">
                 <img src="img/pinhal3.PNG" width="45%" height="100%">
                 <img src="img/pinhal4.PNG" width="45%" height="100%">
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/Vc44US3juGo" frameborder="0"
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/Vc44US3juGo" frameborder="0"
                     allow="accelerometer;
              autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
@@ -514,7 +514,7 @@
                 <img src="img/CAMPOS.PNG" width="45%" height="100%">
                 <img src="img/campos2.PNG" width="45%" height="100%">
 
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/fh0Ox9m9TZA" frameborder="0"
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/fh0Ox9m9TZA" frameborder="0"
                     allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
@@ -574,9 +574,10 @@
                 <img src="img/joana.PNG" width="45%" height="100%">
                 <img src="img/joana1.PNG" width="38%" height="100%">
                 <img src="img/joana2.PNG" width="47%" height="100%">
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/kScJ7YGKy5M" frameborder="0"
+
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/kScJ7YGKy5M" frameborder="0"
                     allow="accelerometer; 
-            autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                 autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
 
             <p> Joanópolis é um município brasileiro do estado de São Paulo, na microrregião de Bragança Paulista,
@@ -621,7 +622,8 @@
                 <img src="img/cunha2.PNG" width="40%" height="100%">
                 <img src="img/cunha4.PNG" width="47%" height="100%">
                 <img src="img/cunha1.PNG" width="40%" height="100%">
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/h1UxQ27aXrw" frameborder="0"
+
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/h1UxQ27aXrw" frameborder="0"
                     allow="accelerometer;
              autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
@@ -700,7 +702,7 @@
                 <iframe width="92%" height="100%" src="https://www.youtube.com/embed/iiMLzgjSHZg" frameborder="0"
                     allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/U8HfmZHUQ-k" frameborder="0"
+            <iframe width="940" height="480"  src="https://www.youtube.com/embed/U8HfmZHUQ-k" frameborder="0"
                     allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
@@ -772,7 +774,7 @@
                 <img src="img/aguas4.PNG" width="49%" height="100%" <br clear="left">
                 <img src="img/aguas5.PNG" width="49%" height="100%" <br clear="left">
                 <img src="img/aguas6.PNG" width="45%" height="100%" <br clear="left">
-                <iframe width="92%" height="100%"  src="https://www.youtube.com/embed/P6ij_qq-aPQ" frameborder="0"
+                <iframe width="940" height="480"  src="https://www.youtube.com/embed/P6ij_qq-aPQ" frameborder="0"
                     allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
@@ -862,7 +864,7 @@
                     <img src="img/uba6.PNG" width="45%" height="100%" <br clear="left">
                     <img src="img/uba7.PNG" width="45%" height="100%" <br clear="left">
                     <img src="img/uba8.PNG" width="45%" height="100%" <br clear="left">
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/hBOMAk-fuhI" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/hBOMAk-fuhI" frameborder="0"
                         allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </section>
@@ -992,7 +994,7 @@
                     <img src="img/gua7.PNG" width="80%" height="100%" <br clear="left">
                     <img src="img/gua8.PNG" width="80%" height="100%" <br clear="left">
                 </section>
-                <iframe width="92%" height="100%" src="https://www.youtube.com/embed/pBasEpX6now" frameborder="0"
+                <iframe width="940" height="480" src="https://www.youtube.com/embed/pBasEpX6now" frameborder="0"
                     allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -1064,7 +1066,7 @@
                     <img src="img/bast6.PNG" width="80%" height="100%" <br clear="left">
                     <img src="img/bast7.PNG" width="80%" height="100%" <br clear="left">
                     <img src="img/bast8.PNG" width="80%" height="100%" <br clear="left">
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/j-vZVCGCW2U" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/j-vZVCGCW2U" frameborder="0"
                         allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </section>
@@ -1133,7 +1135,7 @@
                     <img src="img/ilha6.PNG" width="45%" height="100%" <br clear="left">
                     <img src="img/ilha7.PNG" width="45%" height="100%" <br clear="left">
                     <img src="img/ilha8.PNG" width="45%" height="100%" <br clear="left">
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/_gZK1gneKSc" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/_gZK1gneKSc" frameborder="0"
                         allow="accelerometer;
              autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </section>
@@ -1184,7 +1186,7 @@
                     <img src="img/bert5.PNG" width="45%" height="100%" <br clear="left">
                     <img src="img/bert6.PNG" width="45%" height="100%" <br clear="left">
                 </section>
-                <iframe width="92%" height="100%" src="https://www.youtube.com/embed/ILzB-OjwXTo" frameborder="0"
+                <iframe width="940" height="480" src="https://www.youtube.com/embed/ILzB-OjwXTo" frameborder="0"
                     allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -1262,7 +1264,7 @@
                         <img src="img/san3.PNG" width="45%" height="100%" <br clear="left">
                         <img src="img/san5.PNG" width="45%" height="100%" <br clear="left">
                     </section>
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/yH4uW8WxI3I" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/yH4uW8WxI3I" frameborder="0"
                         allow="accelerometer; autoplay; 
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -1327,10 +1329,10 @@
                         <img src="img/mon3.PNG" width="45%" height="100%" <br clear="left">
                         <img src="img/mon4.PNG" width="45%" height="100%" <br clear="left">
                     </section>
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/c5SmlCTEqQQ" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/c5SmlCTEqQQ" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/Wf5B_CCX7xs" frameborder="0"
+                        <iframe width="940" height="480" src="https://www.youtube.com/embed/Wf5B_CCX7xs" frameborder="0"
                         allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -1387,7 +1389,7 @@
                         <img src="img/per5.PNG" width="45%" height="100%" <br clear="left">
                         <img src="img/per6.PNG" width="45%" height="100%" <br clear="left">
                         <img src="img/peru1.PNG" width="45%" height="100%" <br clear="left">
-                        <iframe width="92%" height="100%" src="https://www.youtube.com/embed/Zqf7R5J_oTQ"
+                        <iframe width="940" height="480" src="https://www.youtube.com/embed/Zqf7R5J_oTQ"
                             frameborder="0" allow="accelerometer; autoplay; 
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </section>
@@ -1453,7 +1455,7 @@
                         <img src="img/ita4.PNG" width="45%" height="100%" <br clear="left">
                         <img src="img/ita1.PNG" width="45%" height="100%" <br clear="left">
                     </section>
-                    <iframe width="92%" height="100%" src="https://www.youtube.com/embed/xh4eRf8Knlg" frameborder="0"
+                    <iframe width="940" height="480" src="https://www.youtube.com/embed/xh4eRf8Knlg" frameborder="0"
                         allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -1539,7 +1541,7 @@
                             <img src="img/ibira2.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/ibira3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/ibira4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/N0KHI5JzW90"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/N0KHI5JzW90"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -1592,7 +1594,7 @@
                             <img src="img/car2.PNG" width="47%" height="100%"<br clear="left">
                             <img src="img/car3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/car4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/N0KHI5JzW90"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/N0KHI5JzW90"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -1693,7 +1695,7 @@
                             <img src="img/acli2.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/acli3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/acli4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/A1-Zzh20S4w"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/A1-Zzh20S4w"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -1742,12 +1744,12 @@
                             <img src="img/vila2.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/vila3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/vila4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/Ls5Q_oPWP90"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/Ls5Q_oPWP90"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/JOByG2ys1mw"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/JOByG2ys1mw"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -1791,7 +1793,7 @@
                             <img src="img/juv2.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/juv3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/juv4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/xZxdDioPF6M"
+                            <iframe width="940" height="480" src="https://www.youtube.com/embed/xZxdDioPF6M"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in -picture"
                                 allowfullscreen></iframe>
@@ -1834,10 +1836,10 @@
                             <img src="img/ipi2.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/ipi3.PNG" width="45%" height="100%" <br clear="left">
                             <img src="img/ipi4.PNG" width="45%" height="100%" <br clear="left">
-                            <iframe width="92%" height="100%" src="https://www.youtube.com/embed/TmbmInoRz7w"
+                            <iframe width="940" height="480"" src="https://www.youtube.com/embed/TmbmInoRz7w"
                                 frameborder="0" allow="accelerometer;
                          autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                         <iframe width="92%" height="100%" src="https://www.youtube.com/embed/6u_7SKzTkqs"
+                         <iframe width="940" height="480" src="https://www.youtube.com/embed/6u_7SKzTkqs"
                                 frameborder="0" allow="accelerometer;
                          autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </section>
