--- a/Sp.html
+++ b/Sp.html
@@ -12,6 +12,7 @@
 <link rel="import" href="mara.html">
 <link rel="import" href="Mt.html">
 <link rel="import" href="Per.html">
+<link rel="import" href="noronha.html">
 </head>
 
 <center>
@@ -38,6 +39,10 @@
   <nav>
       <a href="Natal.html" target="_blank"> <em>RIO GRANDE DO NORTE</em></a>
   </nav>
+  <nav>
+    <a href="noronha.html" target="_blank"> <em>FERNANDO DE NORONHA</em></a>
+</nav>
+
   <nav>
       <link rel="import" href="Natal.html"></nav>
     </div>
