--- a/dom/acessandoAtributos1.html
+++ b/dom/acessandoAtributos1.html
@@ -15,6 +15,11 @@
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
     <script>
+        const img = document.querySelector('img')
+        console.log('getAttribute', img.getAttribute('src'))
+        console.log('src, img.src')
+        console.log('["src"]', img['src'])
+        console.log('img.alt')
         
     </script>
 </body>
